# postgis-property-search-demo-py-v1.0

./: Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
api/: server.py
cloudformation/: database.yaml  main.yaml  monitoring.yaml  parameters.json  security.yaml  vpc.yaml
data/: sample_data.csv
database/: setup.sql
database/migrations/: 001_initial_schema.sql
datasets/: sample_data.geojson
demo/: customer-talking-points.md  customer_talking_points.md  demo-script.md  demo_script.md  presentation-guide.md  presentation_guide.md
docs/: ubuntu-deployment.md
modules/module_01/: README.md  example.py
modules/module_02/: README.md  example.py
modules/module_03/: README.md  example.py
modules/module_04/: README.md  example.py
modules/module_05/: README.md  example.py
modules/module_06/: README.md  example.py
modules/module_07/: README.md  example.py
modules/module_08/: README.md  example.py
modules/module_09/: README.md  example.py
modules/module_10/: README.md  example.py
modules/module_11/: README.md  example.py
modules/module_12/: README.md  example.py
scripts/: bastion-setup.sh
